<resources>
    <string name="app_name">MyCalcV2_0</string>
    <string name="button_mc">MC</string>
    <string name="button_ms">MS</string>
    <string name="button_mr">MR</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_zero">0</string>
    <string name="button_clear">C</string>
    <string name="button_dot">.</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>
    <string name="button_pth1">(</string>
    <string name="button_pth2">)</string>
    <string name="button_del">Del</string>
    <string name="button_equals">=</string>
    <string name="calc_area">0</string>
    <string name="hint">Calculation result will be here</string>
    <string name="button_back">Back</string>


</resources>
