<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">
    <!--android:background="@color/colorDarkGrey"-->

    <TextView
        android:id="@+id/calcArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="fill_vertical|end"
        android:background="@color/colorWhite"
        android:text="@string/calc_area"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonMC"
                style="@style/simple_button_rectangle"
                android:text="@string/button_mc" />

            <Button
                android:id="@+id/button7"
                style="@style/simple_button_round"
                android:text="@string/button_seven" />

            <Button
                android:id="@+id/button4"
                style="@style/simple_button_round"
                android:text="@string/button_four" />


            <Button
                android:id="@+id/button1"
                style="@style/simple_button_round"
                android:text="@string/button_one" />

            <Button
                android:id="@+id/buttonC"
                style="@style/simple_button_triangle"
                android:layout_gravity="center"
                android:text="@string/button_clear" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonMS"
                style="@style/simple_button_rectangle"
                android:text="@string/button_ms" />


            <Button
                android:id="@+id/button8"
                style="@style/simple_button_round"
                android:text="@string/button_eight" />

            <Button
                android:id="@+id/button5"
                style="@style/simple_button_round"
                android:text="@string/button_five" />

            <Button
                android:id="@+id/button2"
                style="@style/simple_button_round"
                android:text="@string/button_two" />

            <Button
                android:id="@+id/button0"
                style="@style/simple_button_round"
                android:text="@string/button_zero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonMR"
                style="@style/simple_button_rectangle"
                android:text="@string/button_mr" />

            <Button
                android:id="@+id/button9"
                style="@style/simple_button_round"
                android:text="@string/button_nine" />

            <Button
                android:id="@+id/button6"
                style="@style/simple_button_round"
                android:text="@string/button_six" />

            <Button
                android:id="@+id/button3"
                style="@style/simple_button_round"
                android:text="@string/button_three" />

            <Button
                android:id="@+id/buttonDot"
                style="@style/simple_button_rectangle"
                android:text="@string/button_dot" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonPlus"
                style="@style/simple_button_rectangle"
                android:text="@string/button_plus" />

            <Button
                android:id="@+id/buttonMinus"
                style="@style/simple_button_rectangle"
                android:text="@string/button_minus" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/simple_button_rectangle"
                android:text="@string/button_multiply" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/simple_button_rectangle"
                android:text="@string/button_divide" />

            <Button
                android:id="@+id/buttonPth1"
                style="@style/simple_button_rectangle"
                android:text="@string/button_pth1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonDel"
                style="@style/simple_button_double_rectangle"
                android:text="@string/button_del" />

            <Button
                android:id="@+id/buttonEquals"
                style="@style/simple_button_double_rectangle"
                android:text="@string/button_equals" />

            <Button
                android:id="@+id/buttonPth2"
                style="@style/simple_button_rectangle"
                android:text="@string/button_pth2" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>